Fixed Kraken exchange url overflow bug
Reduced h2 margin 30 to 25px

--- a/src/Infobox.css
+++ b/src/Infobox.css
@@ -30,6 +30,8 @@
         margin: 50px;
         padding-top: 20px;
         flex-wrap: wrap;
+        
+
 
         /*transition timing setting*/
         transition: all 1.4s;
@@ -59,6 +61,9 @@
     opacity: 0.9;
     font-size: 0.9rem;
     margin-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    word-wrap: break-word;
     
     
   }
@@ -73,7 +78,7 @@
   .card h2 {
     /*setting opacity to zero to make invisible*/
     opacity: 0;
-    margin-top: 30px;
+    margin-top: 23px;
     border: solid 2px white;
     background-color: white;
     color: gray;
